--- a/_includes/education-section.html
+++ b/_includes/education-section.html
@@ -10,7 +10,7 @@
       <div class="col-lg-6 col-md-6 mb-80">
         <div class="d-flex">
           <div class="mr-lg-5 mr-3">
-            <i class="icon icon-light icon-bg bg-white shadow rounded-circle d-block"><img src="{{ site.baseurl }}/assets/images/ur1.png"></i>
+            <i class="icon icon-light icon-bg bg-white shadow rounded-circle d-block"><img src="{{ site.baseurl }}/assets/images/edu.png"></i>
           </div>
           <div>
             <p class="text-dark mb-1">{{ education.date }}</p>
